--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - 27018:27017
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: ${MANGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MANGO_PASSWORD}
 
   mongo-express:
     image: mongo-express
@@ -18,9 +18,9 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MANGO_USER}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MANGO_PASSWORD}
+      ME_CONFIG_MONGODB_URL: mongodb://${MANGO_USER}:${MANGO_PASSWORD}@mongo:27017/
       ME_CONFIG_BASICAUTH: false
 
 
