--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - 27018:27017
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MANGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MANGO_PASSWORD}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
 
   mongo-express:
     image: mongo-express
@@ -18,10 +18,12 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MANGO_USER}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MANGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: mongodb://${MANGO_USER}:${MANGO_PASSWORD}@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USER}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/
       ME_CONFIG_BASICAUTH: false
-
+  #env_file:
+    #- path: ./.env
+     # required: true
 
       #sudo docker compose up --detach --force-recreate --remove-orphans
